forth commit - program is correct